syntax = "proto3";
option java_package = "com.roje.game.message.gf";
option java_multiple_files = true;

message GFCardRoomConfig {
    int32 round = 1;
    int32 payment = 2;
    int32 person = 3;
    int32 base = 4;
    int32 men = 5;
    int32 maxTurn = 6;
    bool switch235 = 7;
}

message BetNotice {
    int64 id = 1;
    int64 time = 2;
}

message ActionRequest {
    int32 action = 1; //1.看牌,2.弃牌,3.跟注,4.加注,5.比牌
    int32 add = 2;
    int64 id = 3;
}